<?xml version="1.0"?>
<package format="3">
  <name>navsat_mqtt</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="ojedamorala@uma.es">Pepe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>mqtt_serialization</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
